# fis-gtm-gui-to-be-from-original-work-stolen-by-yottadb-as-YDBAdminOpsGUI.

./: CMakeLists.txt  install.sh  package-lock.json  package.json  quasar.conf.js
routines/: _YDBUTILS.m  _YDBWEB.m  _YDBWEBAPI.m  _YDBWEBRTNS.m  _YDBWEBXUSCLEAN.m  _YDBWEBXUSCNT.m  _YDBWEBZSY.m  _YDBWEBZU.m
src-pwa/: custom-service-worker.js  pwa-flag.d.ts  register-service-worker.js
src/layouts/: MainLayout.vue
src/pages/: Index.vue
src/pages/Routines/: Routines.vue
src/pages/Utilities/: XCMD.vue
src/router/: routes.js
tests/: routines.spec.js
tools/ci/: needs_copyright.sh  octo.gde  octo_setup.sh
ydbcmake/: CMakeDetermineMCompiler.cmake  CMakeMCompiler.cmake.in  CMakeMInformation.cmake  CMakeTestMCompiler.cmake  FindYOTTADB.cmake
